--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     </section>
 
     <section class="section" id="section-two">
+        <h2 class="section__header">New test section</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A laudantium tenetur sit iusto excepturi, voluptate quae? Veritatis dolor amet sunt error? Error quia dolorem, voluptas cupiditate doloribus dolore modi totam.
+        </p>
+        <p>
+            <i>„Your time is limited, don't waste it on being someone else.”</i>
+        </p>
+    </section>
+    <section class="section" id="section-two">
         <h2 class="section__header">Motivation</h2>
         <p>
             I would like to develope myself. I'm still looking for the best place in work area. I think that my
