added new function name background

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header" id="header">
         <h1>If you want to know me better, please read this text</h1>
     </header>
-    <button class="js-button"><span class="js-themeName">Dark theme</span></button>
+    <button class="js-button"><span class="js-BackgroundName">Dark background</span></button>
     <nav class="navigation">
         <ul class="navigation__list">
             <li class="navigation__item"><a class="navigation__link" href="#section-one">About me</a></li>
