text has been changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2 class="section__header"> About me</h2>
         <img src="images/Paweł.png" alt="Paweł">
         <p>
-            My name is Pawel. I'm 37 years old. I'm a wood technology engineer. Most of my job career
+            My name is Pawel. I'm 38 years old. I'm a wood technology engineer. Most of my job career
             I spent in the furniture industry,<em> but not only.</em> Last three years I was responsible for spare parts
             and logistic department.
             <br>Personally I'm a husband and a father.
@@ -66,15 +66,14 @@
     <section class="section" id="section-three">
         <h2 class="section__header">Why this course ?</h2>
         <p>
-            <b>Many positive opinions encouraged me to buying this course.</b> Chris looks like a nice, positive
-            guy with a big knowlegde. Now I have no choice - I have to learn and grow in programming
+            <b>Many positive opinions encouraged me to buying this course.</b> I want to try and grow in programming
             area &#128218 &#128187
         </p>
     </section>
 
     <section class="section" id="section-four">
         <h2 class="section__header">My goal</h2>
-        <p>I would like to find a new job in 2022 &#127919 </p>
+        <p>I would like to finish frontend developer course in 2023 &#127919 </p>
     </section>
 
     <section class="section" id="section-five">
